Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126151

QJniArray should not require contiguous containers as input or output

XMLWordPrintable

    • Android
    • 71be7834e (dev), c21612d24 (6.8)

      Since QJniArray deep-copies the data into a/the Java container, requiring contiguous containers for fromContainer is over-constrained. Containers with ForwardIterators should suffice. InputIterators probably not, because we need the final size of the container before we start copying, don't we?

      Acceptance criteria:

      • relax the constraints on ctor, fromContainer to Forward
      • update documentation
      • adjust tests

      Found in API-review: https://codereview.qt-project.org/c/qt/qtbase/+/565752/comment/8e9ceda7_9bbd99f5/

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes